# Hbeat-bachelor-project

./: CMakeLists.txt  Hbeat.cpp  README.md
filtre/: CMakeLists.txt  README.md
filtre/data/: text_default.effect
filtre/obs-filters/rnnoise/: CMakeLists.txt
filtre/src/: CMakeLists.txt  obs-filters.cpp  scroll-filter.cpp
filtre/src/data/locale/: en-US.ini
graphe/: CMakeCache.txt  CMakeLists.txt  README.md
graphe/src/: CMakeLists.txt  Hbeat_graphe.cpp
image/: CMakeLists.txt  README.md
image/src/: CMakeLists.txt  Hbeat_image.cpp  color-source.cpp  image-source.c  image-source.cpp  obs-slideshow.c  obs-slideshow.cpp
lsl/: SendDataSimple.cpp
tentative raté/: CMakeLists.txt  Hbeat.c
texte/: .gitlab-ci.yml  CMakeLists.txt  README.md
texte/src/: CMakeLists.txt  Hbeat_text.cpp  lsl_filter.cpp  lsl_plugin.cpp  lsl_plugin.h  text-functionality.cpp
